--- a/room.html
+++ b/room.html
@@ -133,24 +133,23 @@
             let mouseOverDuster = mouseX >= duster.left && mouseX <= duster.right && mouseY >= duster.top && mouseY <= duster.bottom;
             let mouseOverDust = mouseX >= dust.left && mouseX <= dust.right && mouseY >= dust.top && mouseY <= dust.bottom;
             let mouseOverHamper = mouseX >= hamper.left && mouseX <= hamper.right && mouseY >= hamper.top && mouseY <= hamper.bottom;
-
-            if (dusterCheck === '0') {
-                if (mouseX >= duster.left && mouseX <= duster.right && mouseY >= duster.top && mouseY <= duster.bottom) {
-                    tint(192, 255, 172);
-                }
-            }
-            // Transformations and drawing scaled images
-            push();
-            translate(width / 2 + 680 * refScale, height / 2 + 180 * refScale);
-            rotate(PI * 1.1);
-            image(dusterImg, duster.x, duster.y, duster.width, duster.height);
-            pop();
-            // square(width - refScale * 150, height - 700 * refScale, 150 * refScale);
-            tint('none');
-            image(sodaImg, soda.left, soda.top, soda.width, soda.height);
-            image(laundryImg, laundry.left, laundry.top, laundry.width, laundry.height);
+            let mouseOverLaundry = mouseX >= laundry.left && mouseX <= laundry.right && mouseY >= laundry.top && mouseY <= laundry.bottom;
 
             if (dusterCheck != '2') {
+                if (dusterCheck === '0') {
+                    if (mouseX >= duster.left && mouseX <= duster.right && mouseY >= duster.top && mouseY <= duster.bottom) {
+                        tint(192, 255, 172);
+                    }
+                    // Transformations and drawing scaled images
+                    push();
+                    translate(width / 2 + 680 * refScale, height / 2 + 180 * refScale);
+                    rotate(PI * 1.1);
+                    image(dusterImg, duster.x, duster.y, duster.width, duster.height);
+                    pop();
+                    // square(width - refScale * 150, height - 700 * refScale, 150 * refScale);
+                    tint('none');
+                    image(sodaImg, soda.left, soda.top, soda.width, soda.height);
+                }
                 if (mouseX >= dust.left && mouseX <= dust.right && mouseY >= dust.top && mouseY <= dust.bottom) {
                     tint(192, 255, 172);
                 }
@@ -161,17 +160,25 @@
             }
 
             if (hamperCheck != '2') {
-                if (mouseX >= hamper.left && mouseX <= hamper.right && mouseY >= hamper.top && mouseY <= hamper.bottom) {
+                if (hamperCheck === '0') {
+                    if (mouseX >= hamper.left && mouseX <= hamper.right && mouseY >= hamper.top && mouseY <= hamper.bottom) {
+                        tint(192, 255, 172);
+                    }
+                    image(hamperImg, hamper.left, hamper.top, hamper.width, hamper.height);
+                }
+                tint('none');
+                if (mouseX >= laundry.left && mouseX <= laundry.right && mouseY >= laundry.top && mouseY <= laundry.bottom) {
                     tint(192, 255, 172);
                 }
-                image(hamperImg, hamper.left, hamper.top, hamper.width, hamper.height);
+                image(laundryImg, laundry.left, laundry.top, laundry.width, laundry.height);
                 tint('none');
             }
 
             // Set cursor
             cursor(mouseOverDust && dusterCheck != '2' ||
                 mouseOverDuster && dusterCheck === '0' ||
-                mouseOverHamper && hamperCheck === '0' ? HAND : ARROW);
+                mouseOverHamper && hamperCheck === '0' ||
+                mouseOverLaundry && hamperCheck != '2' ? HAND : ARROW);
         }
 
         // Update clickable areas or interactions based on scale
@@ -189,8 +196,8 @@
             }
 
             if (hamperCheck != '2') {
-                if (mouseX >= dust.left && mouseX <= dust.right && mouseY >= dust.top && mouseY <= dust.bottom) {
-                    window.location.href = 'dust.html';
+                if (mouseX >= laundry.left && mouseX <= laundry.right && mouseY >= laundry.top && mouseY <= laundry.bottom) {
+                    window.location.href = 'laundry.html';
                 }
             }
 
